--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,5 +1,6 @@
 ---
 - name: Install libselinux-python.
-  yum: 
+  yum:
     name: libselinux-python
     state: present
+  when: (ansible_os_family == 'RedHat') and (ansible_lsb.major_release|int == 6)
