--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
-- include: setup-RedHat.yml
+- name: Install libselinux-python.
+  yum:
+    name: libselinux-python
+    state: present
   when: ansible_os_family == 'RedHat'
